--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
+<!-- //First link all files and API's together properly. 
+//This means bootstrap, .js, Moment.js
+
+// Gonna try to dip into the html before JS
+//If using form from bootstrap, we would first go in and figure out the rows and columns.
+
+//FIRST FIRST lets get text to display inside the <p>
+//First task on the page is to get the date to display./////We'll use .text to get the API data to appear in the   <p id="currentDay"> tag. 
+
+//Create timeblocks and buttons with bootstrap. BREAKDOWN
+//Each row has 3 columns 
+//Column 1 is the time (static)
+//Column 2 is the form (bootstrap) and will be working with Moment.js to get the current time of day
+//Column 3 is the button which will be working with local storage
+
+// This will be syntax used while working with Moment.js
+// moment().year(year).month(month).date(day) -->
+<!-- I did Psuedo code with Agnes, Olivia, and Jake. -->
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,6 +41,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  </link>
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
